--- a/djangoproject/ecommerceproject/templates/base.html
+++ b/djangoproject/ecommerceproject/templates/base.html
@@ -3,12 +3,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet" >
+    <script src="https://kit.fontawesome.com/1b99dd44bf.js" crossorigin="anonymous" ></script>
     <meta name="description" content="{% block metadescription %} {% endblock %}">
     <title>{% block title %}{% endblock %}</title>
     
 </head>
 <body>
-<div>
+<div class="container">
     {% include 'header.html' %}
     {% include 'navbar.html' %}
 
@@ -16,5 +21,6 @@
     {% endblock %}
 </div>
 {% include 'footer.html' %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
