--- a/djangoproject/ecommerceproject/templates/category.html
+++ b/djangoproject/ecommerceproject/templates/category.html
@@ -50,19 +50,30 @@
 {% endif %}
 </div>
 
-<div>
-    <div>
+<div class="container">
+    <div class="row mx_auto mt-5">
         {% for product in products %}
-        <div>
-            <a href="{{product.get_url}}"><img src="{{product.image.url}}" alt="{{product.name}}" height="100px" width="100px"></a>
-            <div>
+        <div class="my_bottom_margin col-md-3 col-9 col-sm-12 mb-3">
+            <div class="card text-center " style="width: 18rem;">
+            <a href="{{product.get_url}}"><img class="card-img-top my_image" src="{{product.image.url}}" alt="{{product.name}}" height="100px" width="100px"></a>
+            <div class="card-body">
                 <h4>{{product.name}}</h4>
                 <p>{{product.price}}</p>
             </div>
         </div>
+        </div>
         {% endfor %}
+        
     </div>
-</div>
+</div> 
+
+
+
+
+
+
+
+
 
 
 
