--- a/djangoproject/ecommerceproject/templates/footer.html
+++ b/djangoproject/ecommerceproject/templates/footer.html
@@ -1,3 +1,3 @@
-<div>
-    <p>@ copy right ABC shop</p>
+<div class="footer my_footer navbar-fixed-buttom">
+    <p class="text-center">@ copy right ABC shop</p>
 </div>
