--- a/djangoproject/ecommerceproject/static/css/custom.css
+++ b/djangoproject/ecommerceproject/static/css/custom.css
@@ -47,8 +47,10 @@ body{
     letter-spacing: .2em;
     padding-top: 15px;
     padding-bottom: 10px;
+    font-weight: bold;
+    font-weight: bold;
 }
 .my_prod_text{
     padding-right: 20px;
-    
+
 }
