create new search_app for searching products from product list

--- a/djangoproject/ecommerceproject/templates/product.html
+++ b/djangoproject/ecommerceproject/templates/product.html
@@ -23,7 +23,7 @@
             <img src="{{product.image.url}}" style="max-width: 18rem;">
         </div>
         <div>
-            <h1 class="my_prod_title" style="font-weight: bold;">{{product.name}}</h1>
+            <h1 class="my_prod_title">{{product.name}}</h1>
             <p>${{product.price}}</p>
             <p class="my_title">Product Description</p>
             <p class="text-justify my_prod_text ">{{product.description}}</p>
