--- a/djangoproject/ecommerceproject/templates/navbar.html
+++ b/djangoproject/ecommerceproject/templates/navbar.html
@@ -25,8 +25,9 @@
             <a class="nav-link" href=""><i class="fa-solid fa-cart-shopping"></i></a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" role="search" action="{% url 'search_app:searchResult' %}" method="get">
+            {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="Search" name="q" aria-label="Search">
           <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
       </div>
