--- a/djangoproject/ecommerceproject/static/css/custom.css
+++ b/djangoproject/ecommerceproject/static/css/custom.css
@@ -1,4 +1,5 @@
 body{
+    background-color: white;
     font-family: 'Hedvig Letters Serif', serif;
     font-family: 'Roboto Condensed', sans-serif;
 }
@@ -53,4 +54,27 @@ body{
 .my_prod_text{
     padding-right: 20px;
 
+}
+
+/*** cart ***/
+.my_custom_table{
+    min-width: 400px;
+    font-size: 14px;
+}
+.my_thead{
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    background-color:darkgrey;
+}
+.my_custom_a{
+    text-decoration: none;
+}
+.my_custom_icon{
+    text-decoration: none;
+    color: rgb(6, 14, 14);
+}
+.my_custom_button{
+    margin-top: 5px;
+    
 }
