--- a/djangoproject/ecommerceproject/templates/navbar.html
+++ b/djangoproject/ecommerceproject/templates/navbar.html
@@ -21,9 +21,11 @@
                 {% endfor %}
             </ul>
           </li>
+          {% if item_count > 0 %}
           <li class="nav-item">
-            <a class="nav-link" href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            <a class="nav-link" href="{% url 'cart:cart_details' %}"><i class="fa-solid fa-cart-shopping">{{item_count}}</i></a>
           </li>
+          {% endif %}
         </ul>
         <form class="d-flex" role="search" action="{% url 'search_app:searchResult' %}" method="get">
             {% csrf_token %}
