--- a/djangoproject/ecommerceproject/templates/product.html
+++ b/djangoproject/ecommerceproject/templates/product.html
@@ -32,7 +32,7 @@
             <p class="text-justify my_prod_text"><b>out of stock </b>
             {% else %}
 
-                <a class="btn btn-secondary text-center">add to cart</a>
+                <a class="btn btn-secondary text-center " href="{% url 'cart:add_cart' product.id %}">add to cart</a>
             {% endif %}
         </div>   
     </div>
