Delete the products from cart

--- a/djangoproject/ecommerceproject/templates/cart.html
+++ b/djangoproject/ecommerceproject/templates/cart.html
@@ -25,7 +25,7 @@
 <div>
     <div>
         <br>
-        <h1 class="text-center">your shopping cart</h1>
+        <h1 class="text-center">Your Shopping Cart</h1>
         <br>
     </div>
 </div>
@@ -36,7 +36,7 @@
             <thead class="my_thead">
                 <tr>
                     <th colspan="5" style="background-color: darkgray;">
-                            your items
+                            Your Items
                     </th>
                 </tr>
             </thead>
@@ -48,29 +48,29 @@
                     </td>
                     <td class="text-left">
                         <br>
-                        product Name : {{cart_item.product.name}}
+                        Product Name : {{cart_item.product.name}}
                         <br>
                         SKU : {{cart_item.product.id}}
                         <br>
-                        price : {{cart_item.product.price}}
+                        Price : {{cart_item.product.price}}
                         <br>
-                        quantity : {{cart_item.quantity}} x $ {{cart_item.}}
+                        Quantity : {{cart_item.quantity}} x $ {{cart_item.}}
                         <br>
                     </td>
                     <td>
-                        Sub total :$ {{cart_item.sub_total}}
+                        Sub_total :$ {{cart_item.sub_total}}
                     </td>
                     {% if cart_item.quantity < cart_item.product.stock %}
                     <td>
                         <a href="{% url 'cart:add_cart' cart_item.product.id %}" class="my_custom_a"><i class="fa fa-plus custom_icon"></i></a>&nbsp;
                         <a href="{% url 'cart:cart_remove' cart_item.product.id %}" class="my_custom_a"><i class="fa fa-minus custom_icon"></i></a>
-                        &nbsp;<a href="" class="my_custom_icon"><i class="fa fa-trash custom_icon"></i></a>
+                        &nbsp;<a href="{% url 'cart:full_delete' cart_item.product.id %}" class="my_custom_icon"><i class="fa fa-trash custom_icon"></i></a>
                     </td>
                     {% else %}
                     <td>
                        
                         &nbsp;<a href="{% url 'cart:cart_remove' cart_item.product.id %}" class="my_custom_a"><i class="fa fa-minus custom_icon"></i></a>
-                        &nbsp;<a href="" class="my_custom_icon"><i class="fa fa-trash custom_icon"></i></a>
+                        &nbsp;<a href="{% url 'cart:full_delete' cart_item.product.id %}" class="my_custom_icon"><i class="fa fa-trash custom_icon"></i></a>
                     </td>
                     {% endif %}
                 </tr>
@@ -81,25 +81,29 @@
     </div>
 
     <div class="col-md-6 col-sm-12 col-lg-12 text-center">
-        <table class="my_custom_table">
+        <table class="table my_custom_table">
             <thead class="my_thead">
                 <tr>
                     <th colspan="5" style="background-color: darkgray;">
-                        checkout
+                            Check Out
                     </th>
                 </tr>
-
             </thead>
             <tbody>
                 <tr>
                     <td>
-                        please review   your shopping cart items
+                        Please review  your shopping cart items
+                    </td>
+                </tr>
+                <tr>
+                    <td class="text-left">
+                            Your Total is : <strong>{{ total }}</strong>
                     </td>
                 </tr>
             </tbody>
         </table>
         <div class="mx-auto">
-                <a href="{% url 'shop:allProCat' %}" class="btn btn-primary my_custom_button">continu shopping</a>
+                <a href="{% url 'shop:allProCat' %}" class="btn btn-secondary my_custom_button">continu shopping</a>
         </div>
 
     </div>
